deploy/htdocs/version/src/inc/style/component/block/_block-article-teaser.scss
.component-block-article-teaser {
	@include size(16 * $sizeGrid, 8 * $sizeGrid);
	font-size: 0;
	display: inline-block;
	position: relative;
	background: $colorWhite;
	overflow: hidden;
	backface-visibility: hidden;
	transform: translate3d(0, 0, 0);

	aside {
		@include size(8 * $sizeGrid, 100%);
		@include pos(0, auto, 0, 0);
		position: absolute;
		padding: $sizeGrid * 1.5;
		color: $colorPrimary;

		&:after {
			@include triangle(left, bottom, $colorWhite, $sizeGrid);
			@include pos(auto, -$sizeGrid, 0, auto);
			position: absolute;
			content: '';
		}

		.heading {
			margin-bottom: $sizeGrid / 2;
		}

		.copy-01 {
			margin-bottom: $sizeGrid;
			overflow: hidden;
		}

		.component-button-tag {
			margin: 2px;
		}
	}

	figure {
		clip: rect(0, $sizeGrid * 16, $sizeGrid * 8, $sizeGrid * 8);

		img {
			height: 100%;
			transform: translateX(10%);
		}

		.hover-heading {
			@include pos($sizeGrid * 1.5, auto, auto, $sizeGrid);
			font: 600 2rem/1 $fontOpenSans;
			width: 50%;
			transform: translateX($sizeGrid * 2);
			opacity: 0;
			position: absolute;
			color: $colorWhite;
		}

		.hover-icon {
			@include size($sizeGrid);
			@include pos(auto, auto, $sizeGrid * 1.5, $sizeGrid);
			transform: translateX($sizeGrid * 2);
			opacity: 0;
			position: absolute;

			svg {
				overflow: visible;
			}

			path {
				fill: $colorWhite;
			}

			circle {
				fill: transparent;
				stroke: $colorWhite;
				stroke-width: 5px;
			}
		}
	}

	.theme-dark {
		figure {
			.hover-heading {
				color: $colorPrimary;
			}

			.hover-icon {

				path {
					fill: $colorPrimary;
				}

				circle {
					stroke: $colorPrimary;
				}
			}
		}
	}

	&.transition-in-complete {
		figure {
			transition: clip .8s ease(easeOutExpo);

			.hover-heading,
			.hover-icon {
				transition: all .8s ease(easeOutExpo);
			}
		}

		aside {
			transition: transform .8s ease(easeOutExpo);
		}

		img {
			transition: transform .8s ease(easeOutExpo);
		}

		@include hover() {

			figure {
				clip: rect(0, $sizeGrid * 16, $sizeGrid * 8, 0);

				img {
					transform: translateX(0);
				}

				.hover-heading,
				.hover-icon {
					transform: translateX(0);
					opacity: 1;
				}
			}

			aside {
				transform: translateX(-100%) translateX(-$sizeGrid);
			}
		}
	}

	@include respond-to(X_LARGE) {
		width: 15 * $sizeGrid;

		aside {
			width: 7.5 * $sizeGrid;
		}

		figure {
			clip: rect(0, $sizeGrid * 15, $sizeGrid * 8, $sizeGrid * 7.5);
		}

		&.transition-in-complete {
			@include hover() {
				figure {
					clip: rect(0, $sizeGrid * 15, $sizeGrid * 8, 0);
				}
			}
		}
	}

	@include respond-to(ARTICLE_TEASER_LARGE) {
		width: 12 * $sizeGrid;

		aside {
			width: 6 * $sizeGrid;
			padding: $sizeGrid;
		}

		figure {
			clip: rect(0, $sizeGrid * 12, $sizeGrid * 8, $sizeGrid * 6);
		}

		&.transition-in-complete {
			@include hover() {
				figure {
					clip: rect(0, $sizeGrid * 12, $sizeGrid * 8, 0);
				}
			}
		}
	}

	@include respond-to(ARTICLE_TEASER_MEDIUM) {
		width: 9 * $sizeGrid;

		aside {
			width: 6 * $sizeGrid;
			padding: $sizeGrid;
		}

		figure {
			clip: rect(0, $sizeGrid * 9, $sizeGrid * 8, $sizeGrid * 6);
		}

		&.transition-in-complete {
			@include hover() {
				figure {
					clip: rect(0, $sizeGrid * 9, $sizeGrid * 8, 0);
				}
			}
		}
	}

	@include respond-to(SMALL) {
		@include size(100%, auto);
		text-decoration: none;

		figure {
			@include aspect-ratio(576px, 390px);
			height: auto;

			img {
				@include offset(0, 0);
				@include size(100%);
				position: absolute;
				transform: none;
			}

			&:after {
				right: auto;
				left: 0;
			}
		}

		aside {
			position: relative;
			width: 100%;
			padding: $sizeGrid*2;

			.copy {
				margin-bottom: $sizeGrid*2;
			}
		}

		&.transition-in-complete {
			@include hover() {

				figure {
					clip: auto;

					img {
						transform: translateX(0);
					}

					.hover-heading,
					.hover-icon {
						opacity: 0;
					}
				}

				aside {
					transform: none;
				}
			}
		}

	}
}

